[package]
name = "jnp-chat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
crossterm = "0.23.2"
serde_json = "1.0.81"
unicode-width = "0.1.9"
colored = "2.0.0"
chrono = "0.4.19"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"