[package]
name = "jnp-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1.18.1", features = ["full"] }
mini-redis = "0.4"
futures = "0.3.21"
serde_json = "1.0.81"
chrono = "0.4.19"
colored = "2.0.0"